refactor: Update product category endpoint for multiple categories
Refactors the product category browsing functionality in inventory-microservice:
- ProductController: Changed endpoint from GET /products/category/{name}
  to GET /products/categories/{categoriesCsv} to support multiple
  comma-separated category names. Added parsing logic for the CSV string.
- ProductService: Renamed getProductsByCategory to getProductsByCategories.
  Updated to accept a List<String> of category names and return List<ProductDTO>.
  Adjusted to use standard PageRequest and return empty list for no results.
- ProductRepository: Modified findAllByCategories method to accept
  List<String> categories and use an IN clause in the JPQL query with
  LEFT JOIN FETCH.
- Updated ProductServiceTest to reflect service method changes and cover
  various category list inputs (single, multiple, empty, null).
- Updated ProductControllerIT to test the new /categories/{categoriesCsv}
  endpoint, including CSV parsing with single/multiple/empty/spaced values.